--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<% @articles.each do |article| %>
+<h3><%= article.title %></h3>
+<p>
+<%= article.content.truncate(20) %>
+<%= link_to 'read more', article_path(article.id) %>
+</p>
+<h4>status : <%= article.status %></h4>
+<p>
+<span><%= link_to 'edit', edit_article_path(article.id) %><span>
+</p>
+<span> | </span>
+<span><%= link_to 'delete', article_path(article.id), method: "DELETE", data: {confirm: 'Delete this data ? '} %><span>
+<hr/>
+<% end %>
