--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<% if flash[:notice].present? %>
+<%= flash[:notice] %>
+<% end %>
 <%= yield %>
 
 </body>
